tests/error/u64_i64_body.vow
// TEST: stderr "function body type mismatch"
// TEST: error-code TypeMismatch
// A genuine i64 value as the implicit function-body return must not coerce to
// the declared u64 return type.
module U64I64Body

fn count(v: Vec<u64>) -> u64 {
  v.len()
}

fn main() -> i32 {
  0
}
